@@ -1,6 +1,7 @@
 2009-05-17
 	* Added support for the Lua programming language
 	* Added support for rending images by way of IMLIB2
+	* Patch to fix rounding error with CPU values (thanks Filipe)
 
 2009-05-11
 	* Added arguments to hwmon for value precalculation
